# PCodePointerMiner

./: .stylish-haskell.yaml  CHANGELOG.md  PCodePointerMiner.cabal  README.md
app/: Main.hs
example/: example3.json
lib/PcodePointerMiner/: Type.hs  Version.hs
lib/PcodePointerMiner/Type/: BasicBlock.hs  Function.hs  Instruction.hs  Program.hs  Varnode.hs
lib/PcodePointerMiner/Type/BasicBlock/: ID.hs
lib/PcodePointerMiner/Type/Instruction/: ID.hs  Operation.hs
