cabal-version:      2.4
name:               PCodePointerMiner
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yue Yu
maintainer:         yue.yu@superfish.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable PCodePointerMiner
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        PcodePointerMiner.Type
        PcodePointerMiner.Type.BasicBlock
        PcodePointerMiner.Type.BasicBlock.ID
        PcodePointerMiner.Type.Function
        PcodePointerMiner.Type.Instruction
        PcodePointerMiner.Type.Instruction.ID
        PcodePointerMiner.Type.Instruction.Operation
        PcodePointerMiner.Type.Program
        PcodePointerMiner.Type.Varnode
        PcodePointerMiner.Version

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        , aeson       ^>=2.1.2.1
        , base        ^>=4.16.4.0
        , bytestring
        , text

    ghc-options:      -Wunused-imports -Werror
    hs-source-dirs:   app lib
    default-language: Haskell2010
